# semetrics-python

./: README.md  docker-compose.sdk-test.yml  pyproject.toml
semetrics/: __init__.py  client.py  models.py  queue.py  transport.py  worker.py
semetrics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_client.py  test_integration.py  test_models.py  test_queue.py  test_transport.py  test_worker.py
