[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semetrics"
version = "0.1.0"
description = "Python SDK for Semetrics — AI-first product analytics platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["analytics", "tracking", "semetrics", "product-analytics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://semetrics.ru"
Repository = "https://github.com/trombocit/semetrics-python"

[dependency-groups]
dev = ["pytest>=8", "pytest-mock>=3", "respx>=0.21"]

[tool.pytest.ini_options]
markers = ["integration: требует локального docker-compose (запускать вручную)"]

[tool.setuptools.packages.find]
where = ["."]
include = ["semetrics*"]
